dfir_rs/tests/compile-fail-stable/surface_demuxenum_port_duplicate_one.stderr
error: Output connection conflicts with below (unknown:15:17) (1/2)
  --> tests/compile-fail-stable/surface_demuxenum_port_duplicate_one.rs:14:18
   |
14 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^

error: Output connection conflicts with above (unknown:14:17) (2/2)
  --> tests/compile-fail-stable/surface_demuxenum_port_duplicate_one.rs:15:18
   |
15 |         my_demux[Square] -> for_each(std::mem::drop);
   |                  ^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_demuxenum_port_duplicate_one.rs:17:8
   |
17 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
